// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksTable rendering render with error Props 1`] = `
<MessageBox
  icontype="error-circle-o"
  key="tasks-table-error"
  msg="Could not receive data: "
/>
`;

exports[`TasksTable rendering render with loading Props 1`] = `
<div
  className="tasks-table"
>
  <Table
    key="tasks-table"
    rows={
      Array [
        "a",
      ]
    }
  />
  <Pagination
    itemCount={2}
  />
</div>
`;

exports[`TasksTable rendering render with minimal Props 1`] = `
<div
  className="tasks-table"
>
  <Table
    key="tasks-table"
    rows={
      Array [
        "a",
        "b",
      ]
    }
  />
  <Pagination
    itemCount={2}
  />
</div>
`;

exports[`TasksTable rendering render with no results 1`] = `
<span>
  No Tasks
</span>
`;
